# sentiwiki-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
config/: settings.yaml
data/: README.md
deployment/aws/: README.md
deployment/aws/grafana/: README.md
deployment/aws/grafana/dashboards/: rag-metrics.json
deployment/aws/helpers/: check-subnet-public.sh  diagnose-alb-connection.sh  diagnose-api-routing.sh  diagnose-frontend.sh  diagnose-service-communication.sh  fix-security-groups.sh  verify-frontend-build.sh
deployment/aws/prometheus/: prometheus.yml
deployment/aws/scripts/: add-monitoring.sh  check-service-status.sh  clean-task-definitions.sh  cleanup-infrastructure.sh  create-services.sh  force-redeploy-service.sh  get-service-ips.sh  register-task-definitions.sh  setup-autoscaling.sh  setup-infrastructure.sh  sync-api-cors.sh
deployment/aws/task-definitions/: task-api.json  task-frontend.json  task-grafana.json  task-prometheus.json  task-qdrant.json
deployment/docker/: README.md  docker-compose.yml
deployment/docker/prometheus/: prometheus.yml
docs/: README.md
docs/public/: ADVERSARIAL_TESTSET.md  AWS_DEPLOYMENT_GUIDE.md  AWS_IAM_REQUIREMENTS.md  CI_CD_GUIDE.md  LLM_PROVIDERS_GUIDE.md  SCRIPTS_OVERVIEW.md
frontend/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApiStatus.tsx  ConnectionTest.tsx  ConversationList.tsx  ConversationStats.tsx  QuestionSuggestions.tsx  RAGProgress.tsx  ThemeToggle.tsx
frontend/components/ui/: select.tsx  textarea.tsx  toast.tsx
frontend/lib/: api.ts  conversations.ts  use-theme.ts  useToast.ts
frontend/scripts/: generate-runtime-config.js
scripts/: README.md
scripts/data/: enhance_sentiwiki.py
scripts/evaluation/: eval_ragas.py  results_evaluacion_ragas_hard.csv
scripts/experiments/: compare_filtering.py  test_metadata_filtering.py  test_rag_litellm.py  test_retriever.py
scripts/setup/: preload_models.py
src/agents/: __init__.py  router_agent.py
src/api/: __init__.py  main.py
src/crawlers/: scrape_sentiwiki_crawl4ai.py
src/db/: __init__.py  populate_vectors.py  qdrant_client.py
src/llm/: __init__.py  llm_factory.py
src/mcp/: __init__.py  server.py
src/models/: __init__.py  agent.py  enums.py  llm.py  pipeline.py  qdrant.py  retrieval.py
src/parsers/: sentiwiki_chunker.py
src/pipeline/: __init__.py  data_pipeline.py  pipeline_router.py
src/retrieval/: __init__.py  retriever.py
src/utils/: __init__.py  async_utils.py  config.py  exceptions.py  logger.py  markdown_cleaner_sentiwiki.py  metadata_extractor_sentiwiki.py  metadata_filter.py  metadata_normalizer_sentiwiki.py  metrics.py  prompts.py  s3_logger.py  security.py  source_formatter.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_api_collections.py  test_api_endpoints.py  test_api_error_paths.py  test_api_streaming.py
tests/unit/: test_api_main.py  test_async_methods.py  test_llm_factory.py  test_metadata_filter.py  test_qdrant_client.py  test_retriever.py  test_router_agent.py  test_source_formatter.py  test_utils.py
